Resolve "Il menù dell'area personale è visibile anche ai visitatori che non hanno fatto accesso"

--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -26,3 +26,8 @@
   fill: $primary;
   margin-left: 0;
 }
+
+.it-header-slim-wrapper .it-header-slim-wrapper-content a .icon {
+  width: 24px;
+  height: 24px;
+}
